--- a/force-app/main/default/classes/SummitEventsCalendarSubscription.cls
+++ b/force-app/main/default/classes/SummitEventsCalendarSubscription.cls
@@ -4,7 +4,7 @@ public class SummitEventsCalendarSubscription {
         for(Summit_Events_Calendar_Subscription__c sub : newSubs) {
             List<Summit_Events_Calendar_Subscription__c> existing_subs = [SELECT id FROM Summit_Events_Calendar_Subscription__c WHERE Summit_Events_Instance__c = :sub.Summit_Events_Instance__c AND Calendar_Subscriber__c = :sub.Calendar_Subscriber__c];
             
-            if(existing_subs.size() > 0) {
+            if(!existing_subs.isEmpty()) {
                 sub.addError('Duplicate subscription');
             }
         }
